# BH-LIB

./: CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml
src/: bh.py  main.py
src/adapters/sii_api/: client.py  utils.py
src/application/ports/: auth_port.py
src/application/services/: js_parsing_service.py  parsing_service.py  sii_service.py
src/domain/: exceptions.py  models.py
tests/: test_bh.py  test_parsing_service.py  test_sii_service.py
tests/fixtures/: anual.html  mensual.html
